# rustyfarian-peripherals

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  VISION.md  deny.toml  justfile  sdkconfig.defaults
.cargo/: config.toml.dist
crates/rustyfarian-esp-hal-peripherals/: Cargo.toml  README.md  build.rs
crates/rustyfarian-esp-hal-peripherals/examples/: hal_c3_b3f.rs  hal_c3_buzzer.rs  hal_c3_hall_linear.rs  hal_c3_hall_switch.rs  hal_c3_i2c_scan.rs  hal_c3_ir_proximity.rs  hal_c3_poti.rs  hal_c3_poti_led.rs  hal_c3_reed.rs  hal_c3_tilt_motion.rs  hal_c3_tilt_orientation.rs  hal_c3_touch.rs  hal_c6_b3f.rs  hal_esp_b3f.rs  hal_s3_b3f.rs
crates/rustyfarian-esp-hal-peripherals/src/: lib.rs
crates/rustyfarian-esp-idf-peripherals/: Cargo.toml  README.md  build.rs
crates/rustyfarian-esp-idf-peripherals/examples/: idf_c3_b3f.rs  idf_c3_buzzer.rs  idf_c3_hall_linear.rs  idf_c3_i2c_scan.rs  idf_c3_ir_proximity.rs  idf_c3_poti.rs  idf_c3_poti_led.rs  idf_c3_reed.rs  idf_c3_tilt_motion.rs  idf_c3_tilt_orientation.rs  idf_c3_touch.rs  idf_s3_rotary.rs
crates/rustyfarian-esp-idf-peripherals/src/: lib.rs  rotary.rs
crates/tamer/: Cargo.toml  README.md
crates/tamer/src/: analog.rs  button.rs  debounce.rs  hall.rs  lib.rs  mock.rs  mpu6050.rs  presence.rs  range_map.rs  rotary.rs  smoothing.rs  tilt.rs  tone.rs  touch.rs
docs/: ROADMAP.md  hardware-setup.md  key-insights.md  project-lore.md
docs/adr/: 001-input-primitives-origin.md  002-digital-presence.md  003-mpu6050-micromath-dependency.md  004-i2c-bus-pattern.md  005-raw-ffi-persistent-interrupts.md  006-interrupt-encoder-instance-and-api-shape.md  007-touch-event-detection.md  008-display-scope.md
docs/features/: 001-input-primitives-v1.md  003-range-map-v1.md  README.md  hall-sensing-v1.md  interrupt-driven-encoder-v1.md  iram-safe-isr-v1.md  mpu6050-imu-v1.md  tone-sequencer-v1.md  touch-event-detection-v1.md
docs/features/archive/: 003-range-map-v1.md  tone-sequencer-v1.md
scripts/: build-example.sh  doctor.sh  flash.sh  lib.sh  ramdisk-mounted.sh  ramdisk.sh  xtensa-toolchain.sh
