[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["datenkollektiv"]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datenkollektiv/rustyfarian-peripherals"

[workspace.dependencies]
# Workspace-internal crates.
# Path-only (no version) while the workspace is pre-publication; add `version`
# fields here when the first crates.io release wave is cut, mirroring the
# coordinated-wave approach in rustyfarian-ws2812 / rustyfarian-network.
tamer = { path = "crates/tamer", default-features = false }

# External — pure, host-buildable.
# `embedded-hal` is the trait boundary every hardware tier shares: the pure
# `tamer` logic is fed from `embedded_hal::digital::InputPin` adapters, and the
# device crates implement against the same traits. Kept at a caret range while
# pure; the esp-* stacks below switch to exact pins once they are wired.
embedded-hal = { version = "1.0", default-features = false }
nb = { version = "1.1", default-features = false }
# `no_std`/`f32` CORDIC trig (atan2 etc.) for `tamer::tilt`, gated behind the
# `tilt` feature — purpose-built for small no_std code size, not a full libm.
micromath = { version = "2", default-features = false }

# ── Hardware-tier dependencies ───────────────────────────────────────────────
#
# Pinned exactly (`=`), not with carets: the esp-hal and esp-idf ecosystems
# release as coordinated waves, and mixed minors produce feature-unification
# conflicts. Re-use the same wave the sibling repos are on — see the
# `[workspace.dependencies]` tables and rationale comments in rustyfarian-ws2812
# and rustyfarian-network.
#
# Bare-metal (esp-hal) tier:
esp-hal                = { version = "=1.1.0" }
esp-bootloader-esp-idf = { version = "=0.5.0", default-features = false }
esp-println            = { version = "=0.17.0", default-features = false }

# ESP-IDF (std) tier:
esp-idf-hal  = { version = "=0.46.2" }
esp-idf-svc  = { version = "=0.52.1" }
esp-idf-sys  = { version = "=0.37.2" }
embuild      = { version = "=0.33.1", features = ["espidf"] }
critical-section = { version = "=1.2.0" }
log         = { version = "0.4" }
anyhow      = { version = "1.0" }
