[package]
name = "rustyfarian-esp-hal-peripherals"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bare-metal (esp-hal) input drivers for ESP32 — the no_std hardware tier of the rustyfarian peripherals stack"
keywords = ["esp32", "esp-hal", "embedded", "no-std", "gpio"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"

[lib]
name = "rustyfarian_esp_hal_peripherals"

# docs.rs for a bare-metal crate needs a no_std target and exactly one chip
# feature; the ESP32-C3 (RISC-V, broadest support) is the documented default.
[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"
features = ["esp32c3"]

[features]
# Project policy: "ESP32-C3 first" — C3 is the reference chip these examples
# target, so a bare `cargo build`/`cargo doc` picks a working chip without extra
# flags. Downstream consumers selecting another chip use
# `--no-default-features --features <chip>` (as `just check-hal` and the
# `[[example]]` `required-features` already do). `unstable` is bundled because
# esp-hal gates its `main` macro and several GPIO types behind it.
default = ["esp32c3", "unstable"]

# ── Chip features ────────────────────────────────────────────────────────────
#
# Each selects the matching chip across the esp-hal stack. Console output uses
# `esp-println/auto`: C3/C6/S3 boards print over native USB Serial/JTAG when the
# monitor is attached there, and otherwise fall back to UART. Classic ESP32 has
# no USB Serial/JTAG path, so `auto` resolves to UART.
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-println/esp32c3",
    "esp-println/auto",
] # RISC-V, riscv32imc-unknown-none-elf
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-println/esp32c6",
    "esp-println/auto",
] # RISC-V, riscv32imac-unknown-none-elf
esp32 = [
    "esp-hal/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-println/esp32",
    "esp-println/auto",
] # Xtensa LX6, xtensa-esp32-none-elf
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-println/esp32s3",
    "esp-println/auto",
] # Xtensa LX7, xtensa-esp32s3-none-elf

# esp-hal gates its `main` macro and several GPIO types behind `unstable`; `rt`
# pulls in the runtime/interrupt vectoring the examples need.
unstable = ["esp-hal/unstable"]
rt = ["esp-hal/rt"]

[dependencies]
# `tamer` stays pure (no `hal` feature): the examples feed the pure
# `EdgeDetector` directly from an esp-hal `Input`'s `is_high()`.
tamer = { workspace = true }
embedded-hal = { workspace = true }
esp-hal = { workspace = true, features = ["unstable"] }
esp-bootloader-esp-idf = { workspace = true }

[dev-dependencies]
esp-println = { workspace = true, features = ["auto"] }
nb = { workspace = true }

[[example]]
name = "hal_c3_b3f"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_buzzer"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_hall_linear"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_hall_switch"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_i2c_scan"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_ir_proximity"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_poti"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_poti_led"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_reed"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_tilt_motion"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_tilt_orientation"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c3_touch"
required-features = ["esp32c3", "rt", "unstable"]

[[example]]
name = "hal_c6_b3f"
required-features = ["esp32c6", "rt", "unstable"]

[[example]]
name = "hal_esp_b3f"
required-features = ["esp32", "rt", "unstable"]

[[example]]
name = "hal_s3_b3f"
required-features = ["esp32s3", "rt", "unstable"]
