[package]
name = "rustyfarian-esp-idf-peripherals"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-IDF (std) input drivers for ESP32 — the std hardware tier of the rustyfarian peripherals stack (skeleton)"
keywords = ["esp32", "esp-idf", "embedded", "gpio", "rotary"]
categories = ["embedded", "hardware-support"]
readme = "README.md"

[lib]
name = "rustyfarian_esp_idf_peripherals"

[dependencies]
# Always-on, pure, host-buildable. The ESP-IDF HAL is added with the first
# driver:
#   esp-idf-hal = { workspace = true }
#   log         = { workspace = true }
tamer = { workspace = true }

# Once esp-idf-hal is wired, add embuild so examples/tests link against ESP-IDF:
# [build-dependencies]
# embuild = { workspace = true }

# docs.rs cannot build the Xtensa ESP-IDF targets (no Espressif LLVM fork in the
# sandbox); point it at the RISC-V ESP target, which docs.rs supports. A failed
# docs.rs build here is expected once esp-idf-hal lands — the README is the
# primary docs.
[package.metadata.docs.rs]
default-target = "riscv32imc-esp-espidf"
