[package]
name = "rustyfarian-esp-idf-peripherals"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP-IDF (std) input drivers for ESP32 — the std hardware tier of the rustyfarian peripherals stack"
keywords = ["esp32", "esp-idf", "embedded", "gpio", "rotary"]
categories = ["embedded", "hardware-support"]
readme = "README.md"

[lib]
name = "rustyfarian_esp_idf_peripherals"

[build-dependencies]
# Re-emits the ESP-IDF link args in this crate's build script so example/test
# binaries link against ESP-IDF (a dependency's link args do not propagate).
embuild = { workspace = true }

[dependencies]
# `tamer` stays pure: the examples feed the pure `EdgeDetector` directly from an
# esp-idf-hal `PinDriver`'s `is_high()`.
tamer = { workspace = true }
esp-idf-hal = { workspace = true }
# The `critical-section` feature makes esp-idf-svc supply the `critical-section`
# 1.0 implementation (FreeRTOS-backed, ISR-safe) that the rotary driver's ISR
# relies on. Without a provider crate, linking fails with `undefined reference
# to _critical_section_1_0_acquire/release` — and `cargo check` does not link,
# so only a real device build (`just flash`) surfaces it. See project-lore.
esp-idf-svc = { workspace = true, features = ["critical-section"] }
esp-idf-sys = { workspace = true }
critical-section = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[[example]]
name = "idf_c3_b3f"

[[example]]
name = "idf_c3_buzzer"

[[example]]
name = "idf_c3_hall_linear"

[[example]]
name = "idf_c3_i2c_scan"

[[example]]
name = "idf_c3_ir_proximity"

[[example]]
name = "idf_c3_poti"

[[example]]
name = "idf_c3_poti_led"

[[example]]
name = "idf_c3_reed"

[[example]]
name = "idf_c3_tilt_motion"

[[example]]
name = "idf_c3_tilt_orientation"

[[example]]
name = "idf_c3_touch"

[[example]]
name = "idf_s3_rotary"

# docs.rs cannot build the Xtensa ESP-IDF targets (no Espressif LLVM fork in the
# sandbox); point it at the RISC-V ESP target, which docs.rs supports. A failed
# docs.rs build here is expected for an ESP-IDF crate — the README is the
# primary docs.
[package.metadata.docs.rs]
default-target = "riscv32imc-esp-espidf"
